--- a/p10-http/src/app/pages/unsubscribe-rxjs/unsubscribe-poc/unsubscribe-poc.component.html
+++ b/p10-http/src/app/pages/unsubscribe-rxjs/unsubscribe-poc/unsubscribe-poc.component.html
@@ -4,13 +4,13 @@
         <form class="form-inline">
             <div class="form-group mr-sm-2" style="width: 33%;">
                 <input type="text" class="form-control" #valor placeholder="Valor">
-            </div>
-            <div class="form-group mx-sm-2">
+            </div><br>
+            <div class="form-group mx-sm-2" style="text-align: start;">
                 <button type="button" class="btn btn-outline-primary" (click)="emitirValor(valor.value)">
                     Emitir Valor
                 </button>
-            </div>
-            <div class="form-group mx-sm-2">
+            </div><br>
+            <div class="form-group mx-sm-2" style="text-align: start;">
                 <button type="button" class="btn btn-outline-danger" (click)="destruirComponentes()">
                     Mostrar / Destruir Componentes
                 </button>
@@ -24,4 +24,4 @@
       <poc-take-until class="col-md-4"></poc-take-until>
       <poc-take class="col-md-4"></poc-take>
     </div>
-</div> 
+</div>
